@@ -18,6 +18,9 @@
 	* lisp/sawfish/wm/util/compat.jl: Re-expose outline-modes by
 	Christopher Bratusek. Brings back move-outline-mode and
 	resize-outline-mode to sawfish-ui.
+	* lisp/sawfish/wm/ext/error-handler.jl: Add error-handler both by
+	Christopher Bratusek. Allows to print errors both on the screen and
+	the standard-error.
 
 2008-08-29  Janek Kozicki <cosurgi@gmail.com>
 	* lisp/sawfish/wm/commands/grow-pack.jl
